<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>oap-ws-security</groupId>
    <artifactId>oap-ws-security</artifactId>
    <packaging>pom</packaging>
    <version>2.0.5</version>
    <modules>
        <module>oap-ws-security-server</module>
    </modules>

    <repositories>
        <repository>
            <id>oap</id>
            <url>http://mvn.oaplatform.org/artifactory/oap/</url>
        </repository>
    </repositories>

    <properties>
        <maven.compiler.source>1.8</maven.compiler.source>
        <maven.compiler.target>1.8</maven.compiler.target>

        <encoding>UTF-8</encoding>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>${project.build.sourceEncoding}</project.reporting.outputEncoding>

        <oap.version>2.2.7</oap.version>
        <testng.version>6.9.9</testng.version>
        <logback.version>1.1.3</logback.version>
        <slf4j.version>1.7.21</slf4j.version>
        <httpcomponents.version>4.4.4</httpcomponents.version>
        <joda.version>2.9.3</joda.version>
        <jackson.version>2.9.1</jackson.version>
        <lombok.version>1.16.18</lombok.version>
    </properties>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.3</version>
                <configuration>
                    <useIncrementalCompilation>true</useIncrementalCompilation>
                    <compilerArgs>
                        <arg>-parameters</arg>
                        <arg>-Xlint:unchecked</arg>
                    </compilerArgs>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-enforcer-plugin</artifactId>
                <version>1.4.1</version>
                <executions>
                    <execution>
                        <id>enforce</id>
                        <configuration>
                            <fail>false</fail>
                            <rules>
                                <DependencyConvergence/>
                            </rules>
                        </configuration>
                        <goals>
                            <goal>enforce</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>2.18.1</version>
                <configuration>
                    <argLine>
                        -ea -Xmx1000m -XX:+UseConcMarkSweepGC -XX:+CMSParallelRemarkEnabled
                    </argLine>
                    <useFile>true</useFile>
                    <testFailureIgnore>true</testFailureIgnore>
                    <disableXmlReport>false</disableXmlReport>
                    <printSummary>true</printSummary>
                    <forkedProcessTimeoutInSeconds>4800</forkedProcessTimeoutInSeconds>
                    <useSystemClassLoader>false</useSystemClassLoader>
                    <runOrder>balanced</runOrder>
                    <includes>
                        <include>**/*Test.*</include>
                        <include>**/*TestCase.*</include>
                        <include>**/*Suite.*</include>
                    </includes>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <version>2.4</version>
                <artifactId>maven-source-plugin</artifactId>
                <executions>
                    <execution>
                        <id>attach-sources</id>
                        <goals>
                            <goal>jar</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>
</project>
